tests/test73.rael.exp
Error [tests/test73.rael:2:15]: Expected number or range
| log :array at "string"
|               ^
